<resources>
    <string name="app_name">UdacityPraticalQuizOne</string>
    <string name="UserName">UserName</string>
    <string name="Email">Email</string>
    <string name="about"> Write about yourself</string>
    <string name="btnTitle">Next</string>
    <string name="demo_userName">DemoUserName</string>
    <string name="demo_email">DemoEmail</string>
    <string name="demo_about">This is a demo decription and it will be replaced with orginal one.</string>
</resources>
