<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/material_design_background"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextColor="#FFFFFF"
        app:theme="@style/CustomActionBar"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/UserName"
        android:textColor="#FFFFFF"
        android:textColorHint="#A2A2A2"
        android:drawableStart="@drawable/ic_person_white_24dp"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/Email"
        android:textColor="#FFFFFF"
        android:textColorHint="#A2A2A2"
        android:drawableStart="@drawable/ic_mail_outline_white_24dp"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true" />

    <EditText
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/about"
        android:textColor="#FFFFFF"
        android:textColorHint="#A2A2A2"
        android:drawableStart="@drawable/ic_chat_white_24dp"
        android:inputType="textLongMessage"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnTitle"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/about"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="nextButtonFunction"/>

</RelativeLayout>